# stock-manager-cli

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tickers.csv
.claude/: launch.json
.gemini/: mcp_instructions.md  rules.md
.github/workflows/: ci.yml  publish.yml
src/cli_app/: __init__.py  __main__.py  main.py
src/cli_app/commands/: example.py  fetch.py
src/cli_app/core/: fetcher.py
src/tradingtools_stock/: __init__.py  __main__.py  main.py
src/tradingtools_stock/commands/: dashboard.py  db.py  fetch.py  ibkr.py  setup.py  tickers.py
src/tradingtools_stock/core/: config.py  config_store.py  fetcher.py  fundamentals.py  fx.py  ibkr.py  screener.py  setup.py  strategies.py  trades.py  valuation.py
src/tradingtools_stock/dashboard/: app.py
tests/: conftest.py  test_config_store.py  test_db.py  test_fundamentals.py  test_fx.py  test_ibkr.py  test_main.py  test_screener.py  test_setup.py  test_strategies.py  test_trades.py  test_valuation.py
